# quadratic_equation

./: .gitignore  CMakeLists.txt  README.md
include/: header.h
src/: CMakeLists.txt  Source.cpp
tests/: CMakeLists.txt  testMath.cpp  testOverflow.cpp
